2003-02-05  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* added debug code in Java client library. Debug code is activated by setting
	system property "ircam.fts.client.debug" to "true". This can be done by starting
	Java virtual machine with option -Dircam.fts.client.debug=true

	* added "Save As Default Project" implementation

	* changed fts_get_user_project to create the jMax user directory if it does not exist

2003-02-05  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* remove platform dependant default project files:
	   default_project_linux_alsa.jprj
	   default_project_linux_jack.jprj
	   default_project_linux_oss.jprj
	   default_project_macosx.jprj
	   default_project_win32.jrpj

	* hardcoded platform dependant packages in fts_platform_init

	* rename client_pipe_install into exported fts_client_pipe_start

	* rename client_tcp_manager_install into exported fts_client_tcp_start

	* move pipe connection test from fts_client_config (jmax/fts/client.c) to fts_init (jmax/fts/fts.c)

	* merge fts_kernel_init and fts_kernel_classes_config

	* add a null audio port that is always valid but never opened and that corresponds to the name "-"

	
2003-02-04  Diemo Schwarz  <schwarz@ligeti.ircam.fr>

	* play~ understands start message, for consistency with play.
	  Updated help.

	* sequence package changes by Norbert, Riccardo, Diemo:
	Removed spurious "A track with this name already exist!" message.
	Editors	update track/sequence name in window.
	Fixed bug with track persistence -> no more crash on loading saved tracks.
	Added track_highlight_* functions.
	Added message "start" for play object.
	Locate message does not play immediately, but displays position
	using new track_highlight_time function.
	Updated help.


2003-02-04  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* add command line arguments for project and AUDIO/MIDI configuration files

2003-01-30  Francois Dechelle  <dechelle@limbe.ircam.fr>
